# topmark

./: .bake.toml  .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .mdformat.toml  .mdformat.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pypirc.example  .readthedocs.yml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  constraints.txt  lychee.toml  mkdocs.linkcheck.yml  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt  topmark.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: action-pin-audit.yml  ci.yml  published-artifact-validation.yml  release.yml
docs/: contributing.md  gen_api_pages.py  hooks.py  index.md  install.md  terminology.md
docs/_snippets/: .markdownlint.jsonc  api-internal-overrides.md  config-resolution.md  config-strictness.md  config-validation-contract.md  file-discovery-patterns.md  file-type-identifiers.md  machine-path-contract-current-scope.md  no-stdin-option.md  option-spelling.md  output-contract-no-quiet.md  output-contract.md  path-serialization-contract.md  report-scope.md  runtime-configuration-model.md  runtime-validation-model.md  terminology.md
docs/api/: index.md  internals.md  public.md
docs/assets/: version-warning.js
docs/ci/: action-pin-audit.md  ci-workflow.md  dependabot.md  dev-validation.md  index.md  published-artifact-validation.md  release-workflow.md  setup-python-nox-action.md  test-validation.md
docs/configuration/: discovery.md  index.md
docs/dev/: api-stability.md  architecture.md  config-schema.md  configuration-schema.md  documentation-conventions.md  documentation-pipeline.md  index.md  machine-formats.md  machine-output.md  performance-baselines.md  pipelines-reference.md  pipelines.md  plugins.md  protocol-contracts.md  registry-model.md  release-process.md  resolution.md  road-to-1.0.md  roadmap.md  terminology.md
docs/usage/: ci.md  cli.md  configuration.md  exit-codes.md  filetypes.md  filtering.md  getting-started.md  global-options.md  header-placement.md  index.md  machine-output.md  policies.md  pre-commit.md  shared-options.md  upgrading-to-1.0.md
src/topmark/: __init__.py  __main__.py  constants.py  file_resolver.py  py.typed
tests/: __init__.py  conftest.py  snapshots.py  strategies_topmark.py
tests/api/: __init__.py  conftest.py  public_api_snapshot.json  test_api_additional.py  test_api_check_and_strip.py  test_api_core.py  test_api_discovery_parity.py  test_api_more.py  test_api_policy_overlays.py  test_api_probe.py  test_api_report_scope.py  test_api_runtime_config.py  test_api_runtime_probe_results.py  test_api_smoke.py  test_api_stream_collectors.py  test_api_stream_events.py  test_api_strip_report_scope.py  test_api_strip_skip_unsupported.py  test_buckets_check.py  test_buckets_strip.py  test_public_api_snapshot.py  test_public_api_views.py  test_public_imports.py  test_registry_facade.py  test_registry_linkage.py  test_registry_one_step.py  test_registry_overlays.py  test_registry_public_api.py  test_result_view.py
tests/cli/: __init__.py  conftest.py  test_apply_write_guard.py  test_check_exit_codes.py  test_check_no_files.py  test_check_stdin.py  test_cli_helper_contracts.py  test_cli_types.py  test_cmd_common.py  test_command_applicability.py  test_completion.py  test_completion_integration.py  test_config_check_exit_codes.py  test_config_dump_output.py  test_config_human_output.py  test_config_overrides.py  test_diff_edge_cases.py  test_diff_output.py  test_dump_config_output.py  test_exit_codes.py  test_file_type_and_skip_flags.py  test_filetypes.py  test_filters_and_types.py  test_finite_choice_options.py  test_help_all.py  test_help_epilog.py  test_include_exclude_precedence.py  test_logging_flags.py  test_machine_output.py  test_no_files.py  test_option_meta.py  test_options_helpers.py  test_output_assertion_helpers.py  test_pipeline_human_output.py  test_policy_options.py  test_presentation.py  test_probe_exit_codes.py  test_probe_human_output.py  test_processing_case_insensitive_fs.py  test_processing_case_sensitive_fs.py  (+16 more)
tests/config/: __init__.py  test_config_deserializers.py  test_config_resolution.py  test_config_resolution_discovery.py  test_config_resolution_merge.py  test_config_resolution_paths.py  test_config_strictness_and_validity.py  test_config_validation_error.py  test_io.py  test_merge_semantics_invariants.py  test_model_export.py  test_policy_resolution.py
tests/core/: __init__.py  test_constants.py  test_enum_mixins.py  test_errors.py  test_logging.py
tests/dev_validation/: __init__.py  test_code_hygiene_tooling.py  test_docs_hooks.py  test_docs_hygiene_tooling.py  test_docs_utils.py  test_perf_baseline_tooling.py  test_pytest_markers.py  test_registry_validation.py  test_test_package_layout.py
tests/diagnostic/: __init__.py  test_model.py
tests/filetypes/: __init__.py  test_base_registry.py  test_builtin_module_inventory.py  test_content_gate.py  test_filename_rules.py  test_instances_plugins.py  test_model_matching.py
tests/helpers/: __init__.py  api.py  config.py  config_diagnostics.py  console.py  diagnostics.py  io.py  json.py  ndjson.py  paths.py  pipeline.py  registry.py  toml.py  version.py
tests/pipeline/: __init__.py  conftest.py  test_adapters.py  test_bom_shebang_policy.py  test_context_status.py  test_engine.py  test_engine_path_configs.py  test_hard_link_identity.py  test_header_bounds_property.py  test_kinds.py  test_machine_payloads.py  test_outcomes.py  test_pipelines.py  test_policy_whitespace.py  test_reduction.py  test_registry_validation.py  test_reporting.py  test_result.py  test_structured_diff.py  test_synthetic.py  test_updated_content.py  test_view_pruning.py
tests/presentation/: __init__.py  conftest.py  test_config_rendering.py  test_diagnostic_rendering.py  test_diff_render.py  test_markdown_utils.py  test_pipeline_rendering.py  test_probe_rendering.py  (+3 more)
tools/: __init__.py  api_snapshot.py  check_docstring_links.py
(+578 files in other folders)
