# topmark:header:start
#
#   project      : TopMark
#   file         : pyproject.toml
#   file_relpath : pyproject.toml
#   license      : MIT
#   copyright    : (c) 2025 Olivier Biot
#
# topmark:header:end

[project]
name = "topmark"
version = "0.10.2.dev0" # PEP 440: "X.Y.Z.devN", "X.Y.ZrcN", or "X.Y.Z"
description = "A Python CLI to inspect, validate, and manage license and copyright headers."
authors = [{ name = "Olivier Biot", email = "olivier.biot@gmail.com" }]
license = "MIT"
readme = "README.md"
dependencies = [
  # Git-style pattern matching used for file inclusion/exclusion
  "pathspec>=0.12.1,<0.13.0",
  # Manipulate TOML configuration files:
  "tomlkit>=0.13.3,<0.14.0",
  # Read/write TOML (used by CLI for dumps):
  "toml>=0.10.2,<0.11.0",
  # ANSI colored terminal output:
  "yachalk>=0.1.8,<0.2.0",
  # CLI framework
  "click>=8.3.1,<9.0.0",
]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.scripts]
topmark = "topmark.cli.main:cli"

[project.urls]
Homepage = "https://github.com/shutterfreak/topmark"
Documentation = "https://topmark.readthedocs.io/en/latest/"
Source = "https://github.com/shutterfreak/topmark"
Changelog = "https://github.com/shutterfreak/topmark/releases"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
lock = [
  # Dependency management / compile requirements (pip-compile, pip-sync):
  "pip-tools>=7.5.2,<8.0.0", # Installed with `make venv`
]
dev = [
  # Python linter & formatter in one tool (we use it for both):
  "ruff>=0.14.5,<0.15.0",
  # Python docstring linter:
  "pydoclint>=0.8.1,<0.9.0",
  # Traditional Python linter with rich checks:
  "pylint>=4.0.3,<5.0.0",
  # Static type checker with fast, strict CLI (our primary type checker):
  "pyright>=1.1.407,<1.2.0",
  # Markdown formatter:
  "mdformat>=1.0.0,<2.0.0",
  # GitHub Flavored Markdown (including table support) for mdformat:
  "mdformat-gfm>=1.0.0,<2.0.0",
  # TOML formatter (consistent with Taplo VS Code extension):
  "taplo>=0.9.3,<0.10.0",
  # Pre-commit hook manager:
  "pre-commit>=4.4.0,<5.0.0",
  # Run tests across multiple Python versions/environments:
  "tox>=4.32.0,<5.0.0",
  # Build wheel/sdist artifacts:
  "build>=1.3.0,<2.0.0",
  # Upload distributions to PyPI:
  "twine>=6.2.0,<7.0.0",
  # Add deprecation annotations:
  "typing-extensions>=4.15.0,<5.0.0",
  # Formatting and linting for Makefile:
  "mbake>=1.4.3,<2.0.0",
]
docs = [
  # Static site generator core:
  "mkdocs>=1.6.1,<2.0.0",
  # MkDocs theme with rich features:
  "mkdocs-material>=9.7.0,<10.0.0",
  # Auto API reference from docstrings/type hints:
  "mkdocstrings[python]>=0.30.1,<0.31.0",
  # Enable symbol cross-refs in Markdown
  "mkdocs-autorefs>=1.4.3,<2.0.0",
  # Content Inclusion: Processes {% include-markdown ... %} for external snippets
  "mkdocs-include-markdown-plugin>=7.2.0,<8.0.0",
  # Extra Markdown extensions (admonitions, superfences, etc.):
  "pymdown-extensions>=10.17.1,<11.0.0",
  # Programmatically generate documentation pages during the build
  "mkdocs-gen-files>=0.5.0,<0.7.0",
  # Custom Logic: Runs your on_page_markdown hook for callout conversion
  "mkdocs-simple-hooks>=0.1.5,<0.2.0",
  # Python linter & formatter in one tool (docs uses formatter only):
  "ruff>=0.14.5,<0.15.0",
  # Add deprecation annotations:
  "typing-extensions>=4.15.0,<5.0.0",
]
test = [
  # Unit testing framework:
  "pytest>=9.0.1,<10.0.0",
  # Parallel test execution:
  "pytest-xdist>=3.8.0,<4.0.0",
  # Property-based testing library:
  "hypothesis>=6.148.2,<7.0.0",
]
typing = [
  # Type stubs for the toml module:
  "types-toml>=0.10.8.20240310,<0.11.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"topmark" = ["py.typed"]
"topmark.config" = ["topmark-default.toml"]

[tool.setuptools.packages.find]
where = ["src"]

# Markdown formatting
[tool.mdformat]
wrap = 100
extensions = [
  "admonitions", # For !!! note syntax
  "gfm",         # For GFM features like tables
]
# NOTE: exclude only supported in Python 3.13+


# TOML formatting
[tool.taplo.format]
indent_tables = true
align_entries = true
reorder_keys = true

# Prevent Taplo from failing on slow or unreachable remote schema catalog fetches
# This ensures formatting and linting works reliably in VS Code, CI, and pre-commit
[tool.taplo.schemas]
enabled = false # Disable catalog validation but keep syntax linting and formatting active


[tool.mypy]
mypy_path = ["src", "tests", "typings"]

[tool.pylint]

# Disable rules handled by other tools like ruff and black
disable = [
  # General checks handled by Ruff and/or Black
  "C0103", # Invalid name
  "C0114", # Missing module docstring
  "C0115", # Missing class docstring
  "C0116", # Missing function docstring
  "C0301", # Line too long, handled by ruff
  "W0105", # Unnecessary pass statement

  # The following are from your new Pylint output
  # Disable duplicate code checks (R0801) if you expect some code duplication
  # e.g., for file type definitions.
  "R0801", # Duplicate code

  # The `no-else-return` rule (R1705) is a good practice but can be disabled
  # if it conflicts with your preferred coding style.
  "R1705", # Unnecessary "elif" after "return"

  # The `too-many-locals` rule (R0914) can be helpful, but if your functions
  # require many variables, you can disable it or increase the limit.
  "R0914", # Too many local variables

  # The `too-many-positional-arguments` rule (R0917) is an excellent hint for
  # refactoring, but it can be disabled for specific cases like CLI functions.
  "R0917", # Too many positional arguments
]

# Enable the optional typing checker in docstrings
load-plugins = "pylint.extensions.typing"

[tool.ruff]
# The `line-length` rule applies to both the linter and the formatter.
line-length = 100

[tool.ruff.lint]
exclude = [".git", ".venv", "venv", "build", "dist", "migrations"]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "B",  # bugbear
  "I",  # isort-compatible import sorting
  "D",  # pydocstyle
  "TC", # type-checking (TCH001/2/3: move type-only imports under TYPE_CHECKING)
  "UP", # pyupgrade: modern syntax, builtin/collections.abc generics
]
ignore = [
  # Note: D212 and D213 cannot be enabled simultaneously
  "D213", # Keep D213 ignored for Google style
  "D107", # Prefer class docstring over __init__ docstring (align with pydoclint)
  # If you prefer to allow first line not ending with a period (though usually good practice)
  # "D400",
  # If you don't want strict capitalization checks for the first word
  # "D403",
  # If your sections sometimes lack blank lines (though Google style prefers them)
  # "D406", "D407", "D408", "D409",
  # If you don't want to enforce a blank line after the last section in the docstring
  # "D413",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pydoclint]
style = "google"

# Additional semantic checks (tune to your needs)
arg-type-hints-in-docstring = true
check-arg-order = true
check-raises = true
check-return-types = true
require-return-section = true
require-yields-section = false

# You can also disable whole families of rules if needed
# ignore = ["DOC501", "DOC502"]  # example


# Pre-commit configuration
# Coordinates with VS Code settings to ensure consistent formatting and linting across environments
[tool.pre-commit]
default_stages = ["commit"]
# This section coordinates with VS Code settings to ensure consistent formatting and linting
# behavior across local development environments and CI pipelines.

# Pyright configuration
[tool.pyright]
typeCheckingMode = "strict"
stubPath = "typings"
pythonVersion = "3.10"
include = ["src", "tests"]
exclude = [".venv", "venv", "build", "dist", "**/__pycache__"]
# Editor-only integration:
# The settings below help your **editor** (VS Code Pyright extension) resolve imports
# from a local convenience environment (e.g. `.venv`). They are **not** used by CI,
# because our actual type checks run inside tox-managed environments where Pyright
# is invoked with an explicit `--pythonversion` per env.
# If you don't maintain a local `.venv`, you can remove these two lines.
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false # Set to true if you want to be strict about missing type stubs
reportImportCycles = false     # Prevent erroring on type-only circular cependencies

[tool.pytest.ini_options]
markers = [
  "integration: environment-dependent integration checks (e.g., shell completion)",
  "pipeline: tests that exercise the processing pipeline",
  "cli: tests that exercise the CLI",
  "dev_validation: developer validation tests (e.g., registry validation)",
  "hypothesis_slow: long-running property tests (skipped in CI)",
]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".hypothesis",
  ".tox",
  ".venv",
  "venv",
  "build",
  "dist",
  "site",
  "archives",
  "docs",
  "tools",
  "sample_files",
]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["default::DeprecationWarning"]


# TopMark related configuration for the project repository
[tool.topmark]
# TopMark config note:
# This repository uses layered config discovery (defaults → user → project chain → extras → CLI).
# See the shipped default file for details:
#   src/topmark/config/topmark-default.toml  (section: “Config discovery & precedence”)
root = true # Mark this directory as the root for config discovery

[tool.topmark.fields]
project = "TopMark"
license = "MIT"
copyright = "(c) 2025 Olivier Biot"

[tool.topmark.header]
fields = ["project", "file", "file_relpath", "license", "copyright"]

[tool.topmark.policy]
add_only = false
update_only = false
allow_header_in_empty_files = false

[tool.topmark.policy_by_type.python]
allow_header_in_empty_files = true

[tool.topmark.formatting]
align_fields = true # Align colons of fields

[tool.topmark.writer]
strategy = "atomic" # Use the safe atomic writer (default)

[tool.topmark.files]
file_types = []
exclude_from = [".gitignore"]
exclude_patterns = [".git/"]
relative_to = "."
