# topmark:header:start
#
#   project      : TopMark
#   file         : pyproject.toml
#   file_relpath : pyproject.toml
#   license      : MIT
#   copyright    : (c) 2025 Olivier Biot
#
# topmark:header:end

[build-system]
requires      = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topmark"
version = "0.12.0.dev12" # PEP 440: "X.Y.Z.devN", "X.Y.ZrcN", or "X.Y.Z"
description = "A Python CLI to inspect, validate, and manage license and copyright headers."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "headers",
  "license-header",
  "copyright-header",
  "source-code",
  "cli",
  "code-quality",
  "project-maintenance",
  "compliance",
  "formatting",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Olivier Biot", email = "olivier.biot@gmail.com" }]
maintainers = [{ name = "Olivier Biot", email = "olivier.biot@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",

  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing",
  "Topic :: Utilities",

  "Typing :: Typed",
]
requires-python = ">=3.10,<3.15"

# Runtime application dependencies (PEP 621)
dependencies = [
  # CLI framework:
  "click>=8.3.1,<9.0.0",
  # Git-style pattern matching for file inclusion/exclusion:
  "pathspec>=0.12.1,<1.1.0",
  # TOML configuration file manipulation:
  "tomlkit>=0.13.3,<0.15.0",
  # ANSI-colored terminal output:
  "yachalk>=0.1.8,<0.2.0",
]

  [project.optional-dependencies]
  dev = [
    # Build wheel/sdist artifacts:
    "build>=1.3.0,<2.0.0",
    # Formatting and linting for Makefiles:
    "mbake>=1.4.3,<2.0.0",
    # Markdown formatter:
    "mdformat>=1.0.0,<2.0.0",
    # GitHub Flavored Markdown support for mdformat:
    "mdformat-gfm>=1.0.0,<2.0.0",
    # GitHub Flavored Markdown alerts for mdformat:
    "mdformat-gfm-alerts>=0.0.1,<3.0.0",
    # Run tests across multiple Python environments:
    "nox>=2025.11.12,<2027.0.0",
    # Nox integration for uv-based environments:
    "nox-uv>=0.7.0,<1.0.0",
    # Python docstring linter:
    "pydoclint>=0.8.1,<0.9.0",
    # Docstring formatter:
    "pydocstringformatter>=0.7.3,<1.0.0",
    # Pre-commit hook manager:
    "pre-commit>=4.4.0,<5.0.0",
    # Static type checker:
    "pyright>=1.1.407,<1.2.0",
    # Python linter and formatter:
    "ruff>=0.14.5,<0.16.0",
    # TOML formatter:
    "taplo>=0.9.3,<0.10.0",
    # Add deprecation annotations:
    "typing-extensions>=4.15.0,<5.0.0",
    # Upload distributions to PyPI:
    "twine>=6.2.0,<7.0.0",
    # Fast Python package/project manager used by Nox:
    "uv>=0.5.0,<0.11.0",
  ]
  docs = [
    # Symbol cross-references in Markdown:
    "mkdocs-autorefs>=1.4.3,<2.0.0",
    # Programmatically generate documentation pages:
    "mkdocs-gen-files>=0.5.0,<0.7.0",
    # Markdown content inclusion plugin:
    "mkdocs-include-markdown-plugin>=7.2.0,<8.0.0",
    # Navigation from a Markdown summary file:
    "mkdocs-literate-nav>=0.6.2,<0.7.0",
    # Material theme for MkDocs:
    "mkdocs-material>=9.7.0,<10.0.0",
    # Custom page hooks for MkDocs:
    "mkdocs-simple-hooks>=0.1.5,<0.2.0",
    # Static site generator core:
    "mkdocs>=1.6.1,<2.0.0",
    # Auto API reference from docstrings and type hints:
    "mkdocstrings[python]>=0.30.1,<1.1.0",
    # Docstring formatter:
    "pydocstringformatter>=0.7.3,<1.0.0",
    # Extra Markdown extensions:
    "pymdown-extensions>=10.17.1,<11.0.0",
    # Python linter and formatter (formatter used for docs tooling):
    "ruff>=0.14.5,<0.16.0",
    # Add deprecation annotations:
    "typing-extensions>=4.15.0,<5.0.0",
  ]
  test = [
    # Coverage testing framework:
    "coverage[toml]>=7.6,<8.0",
    # Property-based testing library:
    "hypothesis>=6.148.2,<7.0.0",
    # Unit testing framework:
    "pytest>=9.0.1,<10.0.0",
    # Coverage.py support in pytest:
    "pytest-cov>=7.1.0,<8.0.0",
    # Parallel test execution:
    "pytest-xdist>=3.8.0,<4.0.0",
  ]
  typing = []

  [project.scripts]
  topmark = "topmark.cli.main:cli"

  [project.urls]
  Homepage      = "https://github.com/shutterfreak/topmark"
  Documentation = "https://topmark.readthedocs.io/en/latest/"
  Source        = "https://github.com/shutterfreak/topmark"
  Issues        = "https://github.com/shutterfreak/topmark/issues"
  Discussions   = "https://github.com/shutterfreak/topmark/discussions"
  CI            = "https://github.com/shutterfreak/topmark/actions"
  Changelog     = "https://github.com/shutterfreak/topmark/releases"

# Coverage testing configuration
[tool.coverage.run]
branch         = true
source         = ["topmark"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 0
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "raise AssertionError",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output       = "coverage.json"
pretty_print = true

# Pre-commit configuration
# Coordinates with VS Code settings to ensure consistent formatting and linting across environments
[tool.pre-commit]
default_stages = ["commit"]
# This section coordinates with VS Code settings to ensure consistent formatting and linting
# behavior across local development environments and CI pipelines.

[tool.pydoclint]
style = "google"

exclude = '\.venv|archives|build|dist|site|tests' # Regex for paths to skip

# Be strict about docstring structure.
allow-init-docstring        = false
arg-type-hints-in-docstring = false # Types already exist in signatures.
check-arg-order             = true
check-raises                = true
check-return-types          = false
check-yield-types           = false
require-return-section      = true
require-yields-section      = true

[tool.pydocstringformatter]
style           = "pep257"
max-line-length = 100
exclude         = ["tests/**"]
# Specific fixers to ensure internal consistency
beginning-quotes        = true
closing-quotes          = true
capitalize-first-letter = true
final-period            = true

# Pyright configuration
[tool.pyright]
include = ["src", "tests"]
exclude = [
  "**/__pycache__",
  "**/.*",
  ".git",
  ".venv",
  ".vscode",
  "build",
  "dist",
  "venv",
]
pythonVersion = "3.10"
stubPath = "typings"
typeCheckingMode = "strict"

# Editor-only integration:
# The settings below help your **editor** (VS Code Pyright extension) resolve imports
# from a local convenience environment (e.g. `.venv`). They are **not** used by CI,
# because our actual type checks run inside tox-managed environments where Pyright
# is invoked with an explicit `--pythonversion` per env.
# If you don't maintain a local `.venv`, you can remove these two lines.
venvPath                           = "."
venv                               = ".venv"
reportImportCycles                 = true
reportMissingImports               = true
reportMissingTypeStubs             = false   # Set to true if you want to be strict about missing type stubs
reportPrivateUsage                 = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport                 = true
reportUnusedVariable               = true

[tool.pytest.ini_options]
markers = [
  "api: tests that exercise the API",
  "cli: tests that exercise the CLI",
  "dev_validation: developer validation tests (e.g., registry validation)",
  "hypothesis_slow: long-running property tests (skipped in CI)",
  "integration: environment-dependent integration checks (e.g., shell completion)",
  "pipeline: tests that exercise the processing pipeline",
]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".hypothesis",
  ".venv",
  ".vscode",
  "archives",
  "build",
  "dist",
  "docs",
  "sample_files",
  "site",
  "tools",
  "venv",
]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["default::DeprecationWarning"]

[tool.ruff]
# Shared formatter/linter line length.
line-length = 100

  [tool.ruff.format]
  quote-style               = "double"
  indent-style              = "space"
  skip-magic-trailing-comma = false
  line-ending               = "lf"
  # Keep Google-style Args examples clean
  docstring-code-format = true

  [tool.ruff.lint]
  exclude = [".git", ".venv", ".vscode", "build", "dist", "venv"]
  select = [
    "B",      # (flake8-bugbear)
    "B904",   # raise-without-from inside except
    "B905",   # zip() without strict=
    "BLE",    # (flake8-blind-except)
    "C4",     # (flake8-comprehensions)
    "D",      # (pydocstyle)
    "DTZ",    # (flake8-datetimez): catches naive datetime usage
    "E",      # (pycodestyle) errors
    "ERA",    # (eradicate) commented-out code
    "F",      # (pyflakes)
    "FA",     # (flake8-future-annotations)
    "G",      # flake8-logging-format
    "I",      # isort-compatible import sorting
    "PTH",    # pathlib usage
    "PYI",    # flake8-pyi (stub-related rules, includes __all__ checks)
    "RUF010", # (ruff) prefer !s / !r in f-strings
    "RUF022", # (ruff) sorted and unique __all__
    "RUF023", # (ruff) sorted and unique __slots__
    "RUF100", # (ruff) unused noqa
    "S",      # (bandit) catch risky patterns
    "SIM",    # simplify complex conditionals
    "T20",    # Enable print linting globally
    "TC",     # type-checking imports
    "TID",    # Tidy imports
    "TRY",    # tryceratops — structured exception handling
    "UP",     # pyupgrade
  ]
  ignore = [
    "D107", # pydocstyle: prefer class docstring over __init__ docstring
    "D213", # pydocstyle: keep D213 ignored for Google style (incompatible with D212)
    # "D400",  # pydocstyle: allow first line not ending with a period
    # "D403",  # pydocstyle: No strict capitalization checks for the first word
    # "D406", "D407", "D408", "D409", # pydocstyle: If your sections sometimes lack blank lines
    # "D413", # pydocstyle: don't enforce a blank line after the last section in the docstring
    "ERA001", # eradicate: TopMark headers trigger false positives
    "TRY003", # tryceratops: Avoid specifying long messages outside the exception class
    "TRY400",
    "TRY401",
  ]

  # Optional rule groups you may enable later if desired:
  # "C90"  # mccabe complexity (enabled separately via [tool.ruff.lint.mccabe])

    [tool.ruff.lint.per-file-ignores]
    "docs/**/*.py"            = ["S101", "T201"]
    "tests/**/*.py"           = ["ERA", "S101"]
    "tools/**/*.py"           = ["S101", "T201"]
    "src/topmark/cli/**/*.py" = ["T201"]

    [tool.ruff.lint.isort]
    required-imports = ["from __future__ import annotations"]
    # Enforce "One Name Per Import Line" automatically
    force-single-line = true

    [tool.ruff.lint.mccabe]
    max-complexity = 15

    [tool.ruff.lint.pydocstyle]
    convention = "google"

[tool.setuptools]
package-dir          = { "" = "src" }
include-package-data = true

  [tool.setuptools.package-data]
  "topmark"      = ["py.typed"]
  "topmark.toml" = ["topmark-example.toml"]

  [tool.setuptools.packages.find]
  where = ["src"]


[tool.topmark]
root = true # Mark this directory as the root for config discovery

  [tool.topmark.fields]
  project   = "TopMark"
  license   = "MIT"
  copyright = "(c) 2025 Olivier Biot"

  [tool.topmark.files]
  include_file_types = []
  exclude_file_types = []
  exclude_from       = [".gitignore"]
  exclude_patterns   = [".git/"]

  [tool.topmark.formatting]
  align_fields = true # Align colons of fields
  [tool.topmark.header]
  fields      = ["project", "file", "file_relpath", "license", "copyright"]
  relative_to = "."

  [tool.topmark.policy]
  header_mutation_mode               = "all"
  allow_header_in_empty_files        = false
  empty_insert_mode                  = "logical_empty"
  render_empty_header_when_no_fields = false
  allow_reflow                       = false
  allow_content_probe                = true

  [tool.topmark.policy_by_type.python]
  allow_header_in_empty_files = true

  [tool.topmark.writer]
  strategy = "atomic" # Use the safe atomic writer (default)
